--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       text-align: center;
     }
     header img {
-      height: 200px;
+      height: 140px;
     }
     .container {
       padding: 20px;
@@ -28,7 +28,7 @@
     }
     .car-image {
       width: 100%;
-      max-width: 300px;
+      max-width: 450px;
       display: block;
       margin: 0 auto 20px auto;
     }
@@ -53,6 +53,11 @@
       width: 20px;
       height: 20px;
     }
+    .info {
+      text-align: center;
+      font-weight: bold;
+      margin-bottom: 20px;
+    }
     form {
       display: flex;
       flex-direction: column;
@@ -75,7 +80,7 @@
       border-radius: 5px;
       cursor: pointer;
     }
-    .estimation, .message {
+    .estimation {
       text-align: center;
       font-weight: bold;
       margin-top: 10px;
@@ -99,7 +104,6 @@
 
   <div class="container">
     <img src="voiture.png" alt="Voiture VTC" class="car-image" />
-
     <div class="buttons">
       <a href="tel:0644120784"><img src="https://img.icons8.com/ios-filled/50/FFFFFF/phone.png"/> Appeler</a>
       <a href="https://wa.me/33644120784" target="_blank"><img src="https://img.icons8.com/ios-filled/50/FFFFFF/whatsapp.png"/> WhatsApp</a>
@@ -108,17 +112,25 @@
       <a href="snapchat://add/ouassvtc"><img src="https://img.icons8.com/ios-filled/50/FFFFFF/snapchat.png"/> Snapchat</a>
     </div>
 
+    <div class="info">
+      OuassVTC est votre service de transport privé basé à Perpignan. Nos chauffeurs professionnels sont disponibles 7j/7 pour tous vos déplacements avec ponctualité, sécurité et confort. Nous vous offrons un service rapide et efficace pour vous conduire où vous le souhaitez. Faites confiance à OuassVTC pour vos trajets personnels, professionnels ou touristiques.
+    </div>
+
     <form onsubmit="sendEmail(event)">
       <input type="text" id="nom" name="nom" placeholder="Nom" required />
       <input type="tel" id="telephone" name="telephone" placeholder="Téléphone" required />
       <input type="text" id="depart" name="depart" placeholder="Adresse de départ" required />
+      <input type="text" id="ville_depart" name="ville_depart" placeholder="Ville de départ" required />
+      <input type="text" id="cp_depart" name="cp_depart" placeholder="Code postal départ" required pattern="\d{5}" />
       <input type="text" id="arrivee" name="arrivee" placeholder="Adresse d'arrivée" required />
+      <input type="text" id="ville_arrivee" name="ville_arrivee" placeholder="Ville d'arrivée" required />
+      <input type="text" id="cp_arrivee" name="cp_arrivee" placeholder="Code postal arrivée" required pattern="\d{5}" />
       <input type="datetime-local" id="dateheure" name="dateheure" required />
       <textarea id="message" name="message" placeholder="Informations complémentaires"></textarea>
+      <div class="estimation" id="prixEstime"></div>
       <button type="submit">Envoyer la demande</button>
     </form>
 
-    <div class="estimation" id="prixEstime"></div>
     <div id="google_translate_element" style="text-align:center;margin-top:20px;"></div>
   </div>
 
@@ -135,53 +147,47 @@
       emailjs.init("U08QGWWRUenJDOllc");
     })();
 
-    async function getCoordinates(address) {
-      const response = await fetch(`https://nominatim.openstreetmap.org/search?format=json&q=${encodeURIComponent(address)}`);
-      const data = await response.json();
-      return data && data[0] ? { lat: data[0].lat, lon: data[0].lon } : null;
-    }
-
-    async function sendEmail(event) {
+    function sendEmail(event) {
       event.preventDefault();
       const depart = document.getElementById("depart").value;
       const arrivee = document.getElementById("arrivee").value;
-      const coordsDep = await getCoordinates(depart);
-      const coordsArr = await getCoordinates(arrivee);
 
-      if (!coordsDep || !coordsArr) {
-        document.getElementById("prixEstime").innerText = "Adresses invalides pour le calcul de distance.";
-        return;
-      }
+      // Estimation avant envoi
+      estimateDistance(depart, arrivee).then((distanceInfo) => {
+        const distanceText = `\n\nDistance estimée : ${distanceInfo.km} km\nPrix estimé : ${distanceInfo.prix} €`;
 
-      const routeUrl = `https://router.project-osrm.org/route/v1/driving/${coordsDep.lon},${coordsDep.lat};${coordsArr.lon},${coordsArr.lat}?overview=false`;
-      const route = await fetch(routeUrl).then(res => res.json());
-      let distanceKm = 0;
-      let prix = 0;
-
-      if (route.routes && route.routes.length) {
-        distanceKm = route.routes[0].distance / 1000;
-        const distanceArrondie = Math.max(distanceKm, 5);
-        prix = Math.max(20, distanceArrondie * 1.6).toFixed(2);
-        document.getElementById("prixEstime").innerText = `Distance estimée : ${distanceKm.toFixed(1)} km | Prix estimé : ${prix} €`;
-      }
-
-      const messageText = document.getElementById("message").value +
-        `\n\nDistance estimée : ${distanceKm.toFixed(1)} km\nPrix estimé : ${prix} €`;
-
-      emailjs.send("service_kdvgh9f", "template_5xt5vlv", {
-        nom: document.getElementById("nom").value,
-        telephone: document.getElementById("telephone").value,
-        dateheure: document.getElementById("dateheure").value,
-        depart,
-        arrivee,
-        message: messageText
-      })
-      .then(() => {
-        alert("Votre demande a bien été envoyée !");
-      })
-      .catch(() => {
-        alert("Erreur lors de l'envoi. Veuillez réessayer.");
+        emailjs.send("service_kdvgh9f", "template_5xt5vlv", {
+          nom: document.getElementById("nom").value,
+          telephone: document.getElementById("telephone").value,
+          depart,
+          ville_depart: document.getElementById("ville_depart").value,
+          cp_depart: document.getElementById("cp_depart").value,
+          arrivee,
+          ville_arrivee: document.getElementById("ville_arrivee").value,
+          cp_arrivee: document.getElementById("cp_arrivee").value,
+          dateheure: document.getElementById("dateheure").value,
+          message: document.getElementById("message").value + distanceText
+        })
+        .then(() => alert("Votre demande a bien été envoyée !"))
+        .catch(() => alert("Erreur lors de l'envoi. Veuillez réessayer."));
       });
+    }
+
+    function estimateDistance(depart, arrivee) {
+      const url = `https://router.project-osrm.org/route/v1/driving/${encodeURIComponent(depart)};${encodeURIComponent(arrivee)}?overview=false`;
+      return fetch(url)
+        .then(res => res.json())
+        .then(data => {
+          let distanceKm = 0;
+          if (data.routes && data.routes.length) {
+            distanceKm = data.routes[0].distance / 1000;
+          }
+          const distanceArrondie = Math.max(distanceKm, 7);
+          const prix = Math.max(20, distanceArrondie * 1.6);
+          document.getElementById("prixEstime").innerText =
+            `Distance estimée : ${distanceKm.toFixed(1)} km | Prix estimé : ${prix.toFixed(2)} €`;
+          return { km: distanceKm.toFixed(1), prix: prix.toFixed(2) };
+        });
     }
 
     function googleTranslateElementInit() {
