--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>OuassVTC - Réservation VTC à Perpignan</title>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-5BG2J1H8TC"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){ dataLayer.push(arguments); }
+    gtag('js', new Date());
+    gtag('config', 'G-5BG2J1H8TC');
+  </script>
   <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
   <style>
     body {
@@ -15,22 +22,23 @@
     }
     header {
       background-color: #000;
-      padding: 20px;
       text-align: center;
+      padding: 20px;
     }
     header img {
-      height: 140px;
+      max-height: 180px;
+      width: auto;
     }
     .container {
-      padding: 20px;
       max-width: 900px;
       margin: auto;
+      padding: 20px;
     }
     .car-image {
       width: 100%;
-      max-width: 450px;
+      max-width: 380px;
+      margin: 0 auto 20px;
       display: block;
-      margin: 0 auto 20px auto;
     }
     .buttons {
       display: flex;
@@ -63,7 +71,7 @@
       flex-direction: column;
       gap: 10px;
       max-width: 500px;
-      margin: 20px auto;
+      margin: auto;
     }
     input, textarea {
       padding: 10px;
@@ -72,12 +80,12 @@
       border: 1px solid #ccc;
     }
     button {
-      padding: 10px;
       background-color: #007bff;
       color: white;
-      font-size: 16px;
       border: none;
+      padding: 12px;
       border-radius: 5px;
+      font-size: 16px;
       cursor: pointer;
     }
     .estimation {
@@ -104,6 +112,7 @@
 
   <div class="container">
     <img src="voiture.png" alt="Voiture VTC" class="car-image" />
+
     <div class="buttons">
       <a href="tel:0644120784"><img src="https://img.icons8.com/ios-filled/50/FFFFFF/phone.png"/> Appeler</a>
       <a href="https://wa.me/33644120784" target="_blank"><img src="https://img.icons8.com/ios-filled/50/FFFFFF/whatsapp.png"/> WhatsApp</a>
@@ -113,21 +122,17 @@
     </div>
 
     <div class="info">
-      OuassVTC est votre service de transport privé basé à Perpignan. Nos chauffeurs professionnels sont disponibles 7j/7 pour tous vos déplacements avec ponctualité, sécurité et confort. Nous vous offrons un service rapide et efficace pour vous conduire où vous le souhaitez. Faites confiance à OuassVTC pour vos trajets personnels, professionnels ou touristiques.
+      OuassVTC est votre service de transport privé basé à Perpignan. Nos chauffeurs professionnels sont disponibles 7j/7 pour tous vos déplacements avec ponctualité, sécurité et confort.
     </div>
 
     <form onsubmit="sendEmail(event)">
       <input type="text" id="nom" name="nom" placeholder="Nom" required />
       <input type="tel" id="telephone" name="telephone" placeholder="Téléphone" required />
-      <input type="text" id="depart" name="depart" placeholder="Adresse de départ" required />
-      <input type="text" id="ville_depart" name="ville_depart" placeholder="Ville de départ" required />
-      <input type="text" id="cp_depart" name="cp_depart" placeholder="Code postal départ" required pattern="\d{5}" />
-      <input type="text" id="arrivee" name="arrivee" placeholder="Adresse d'arrivée" required />
-      <input type="text" id="ville_arrivee" name="ville_arrivee" placeholder="Ville d'arrivée" required />
-      <input type="text" id="cp_arrivee" name="cp_arrivee" placeholder="Code postal arrivée" required pattern="\d{5}" />
+      <input type="text" id="depart" name="depart" placeholder="Adresse de départ (ville + code postal)" required />
+      <input type="text" id="arrivee" name="arrivee" placeholder="Adresse d'arrivée (ville + code postal)" required />
       <input type="datetime-local" id="dateheure" name="dateheure" required />
       <textarea id="message" name="message" placeholder="Informations complémentaires"></textarea>
-      <div class="estimation" id="prixEstime"></div>
+      <div class="estimation" id="prixEstime">Calcul en cours...</div>
       <button type="submit">Envoyer la demande</button>
     </form>
 
@@ -139,55 +144,70 @@
   </footer>
 
   <div class="hidden-keywords">
-    Taxi Perpignan, VTC 66, chauffeur privé, Uber, G7, Bolt, réservation VTC, transport sécurisé, chauffeur disponible, véhicule avec chauffeur, service de transport 24/7, alternative taxi.
+    Taxi Perpignan, VTC 66, chauffeur privé, Uber, réservation VTC Perpignan, alternative taxi.
   </div>
 
   <script>
-    (function() {
-      emailjs.init("U08QGWWRUenJDOllc");
-    })();
+    function trackClick(eventName) {
+      gtag('event', eventName, {
+        event_category: 'Interaction',
+        event_label: 'OuassVTC'
+      });
+    }
+
+    emailjs.init("U08QGWWRUenJDOllc");
 
     function sendEmail(event) {
       event.preventDefault();
       const depart = document.getElementById("depart").value;
       const arrivee = document.getElementById("arrivee").value;
 
-      // Estimation avant envoi
-      estimateDistance(depart, arrivee).then((distanceInfo) => {
-        const distanceText = `\n\nDistance estimée : ${distanceInfo.km} km\nPrix estimé : ${distanceInfo.prix} €`;
-
+      estimateDistance(depart, arrivee).then(({distanceKm, prix}) => {
         emailjs.send("service_kdvgh9f", "template_5xt5vlv", {
           nom: document.getElementById("nom").value,
           telephone: document.getElementById("telephone").value,
-          depart,
-          ville_depart: document.getElementById("ville_depart").value,
-          cp_depart: document.getElementById("cp_depart").value,
-          arrivee,
-          ville_arrivee: document.getElementById("ville_arrivee").value,
-          cp_arrivee: document.getElementById("cp_arrivee").value,
           dateheure: document.getElementById("dateheure").value,
-          message: document.getElementById("message").value + distanceText
-        })
-        .then(() => alert("Votre demande a bien été envoyée !"))
-        .catch(() => alert("Erreur lors de l'envoi. Veuillez réessayer."));
+          depart,
+          arrivee,
+          message: document.getElementById("message").value,
+          prix_estime: prix.toFixed(2) + " €",
+          distance_estimee: distanceKm.toFixed(1) + " km"
+        }).then(() => {
+          alert("Votre demande a bien été envoyée !");
+        }).catch(() => {
+          alert("Erreur lors de l'envoi.");
+        });
       });
     }
 
-    function estimateDistance(depart, arrivee) {
+    async function estimateDistance(depart, arrivee) {
       const url = `https://router.project-osrm.org/route/v1/driving/${encodeURIComponent(depart)};${encodeURIComponent(arrivee)}?overview=false`;
-      return fetch(url)
-        .then(res => res.json())
-        .then(data => {
-          let distanceKm = 0;
-          if (data.routes && data.routes.length) {
-            distanceKm = data.routes[0].distance / 1000;
-          }
-          const distanceArrondie = Math.max(distanceKm, 7);
-          const prix = Math.max(20, distanceArrondie * 1.6);
-          document.getElementById("prixEstime").innerText =
-            `Distance estimée : ${distanceKm.toFixed(1)} km | Prix estimé : ${prix.toFixed(2)} €`;
-          return { km: distanceKm.toFixed(1), prix: prix.toFixed(2) };
-        });
+      try {
+        const res = await fetch(url);
+        const data = await res.json();
+        if (data.routes && data.routes.length) {
+          const distanceKm = data.routes[0].distance / 1000;
+          const distanceCorrigee = Math.max(distanceKm, 7);
+          const prix = Math.max(20, distanceCorrigee * 1.6);
+          document.getElementById("prixEstime").innerText = `Distance estimée : ${distanceKm.toFixed(1)} km | Prix estimé : ${prix.toFixed(2)} €`;
+          return {distanceKm, prix};
+        } else {
+          document.getElementById("prixEstime").innerText = "Erreur lors de l'estimation.";
+          return {distanceKm: 0, prix: 20};
+        }
+      } catch (err) {
+        document.getElementById("prixEstime").innerText = "Impossible de calculer la distance.";
+        return {distanceKm: 0, prix: 20};
+      }
+    }
+
+    document.getElementById("depart").addEventListener("change", updateEstimation);
+    document.getElementById("arrivee").addEventListener("change", updateEstimation);
+
+    function updateEstimation() {
+      const depart = document.getElementById("depart").value;
+      const arrivee = document.getElementById("arrivee").value;
+      if (depart && arrivee) estimateDistance(depart, arrivee);
     }
 
     function googleTranslateElementInit() {
