--- a/index.html
+++ b/index.html
@@ -4,105 +4,23 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>OuassVTC - Réservation VTC à Perpignan</title>
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-5BG2J1H8TC"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){ dataLayer.push(arguments); }
-    gtag('js', new Date());
-    gtag('config', 'G-5BG2J1H8TC');
-  </script>
   <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #f5f5f5;
-      color: #333;
-      margin: 0;
-      padding: 0;
-    }
-    header {
-      background-color: #000;
-      text-align: center;
-      padding: 20px;
-    }
-    header img {
-      max-height: 180px;
-      width: auto;
-    }
-    .container {
-      max-width: 900px;
-      margin: auto;
-      padding: 20px;
-    }
-    .car-image {
-      width: 100%;
-      max-width: 380px;
-      margin: 0 auto 20px;
-      display: block;
-    }
-    .buttons {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 10px;
-      margin-bottom: 20px;
-    }
-    .buttons a {
-      display: flex;
-      align-items: center;
-      gap: 5px;
-      background-color: #000;
-      color: white;
-      padding: 10px 15px;
-      border-radius: 5px;
-      text-decoration: none;
-    }
-    .buttons a img {
-      width: 20px;
-      height: 20px;
-    }
-    .info {
-      text-align: center;
-      font-weight: bold;
-      margin-bottom: 20px;
-    }
-    form {
-      display: flex;
-      flex-direction: column;
-      gap: 10px;
-      max-width: 500px;
-      margin: auto;
-    }
-    input, textarea {
-      padding: 10px;
-      font-size: 16px;
-      border-radius: 5px;
-      border: 1px solid #ccc;
-    }
-    button {
-      background-color: #007bff;
-      color: white;
-      border: none;
-      padding: 12px;
-      border-radius: 5px;
-      font-size: 16px;
-      cursor: pointer;
-    }
-    .estimation {
-      text-align: center;
-      font-weight: bold;
-      margin-top: 10px;
-    }
-    footer {
-      background-color: #000;
-      color: white;
-      text-align: center;
-      padding: 30px 10px;
-      margin-top: 40px;
-    }
-    .hidden-keywords {
-      display: none;
-    }
+    body { font-family: Arial, sans-serif; background-color: #f5f5f5; color: #333; margin: 0; padding: 0; }
+    header { background-color: #000; padding: 20px; text-align: center; }
+    header img { height: 140px; }
+    .container { padding: 20px; max-width: 900px; margin: auto; }
+    .car-image { width: 100%; max-width: 450px; display: block; margin: 0 auto 20px auto; }
+    .buttons { display: flex; flex-wrap: wrap; justify-content: center; gap: 10px; margin-bottom: 20px; }
+    .buttons a { display: flex; align-items: center; gap: 5px; background-color: #000; color: white; padding: 10px 15px; border-radius: 5px; text-decoration: none; }
+    .buttons a img { width: 20px; height: 20px; }
+    .info { text-align: center; font-weight: bold; margin-bottom: 20px; }
+    form { display: flex; flex-direction: column; gap: 10px; max-width: 500px; margin: 20px auto; }
+    input, textarea { padding: 10px; font-size: 16px; border-radius: 5px; border: 1px solid #ccc; }
+    button { padding: 10px; background-color: #007bff; color: white; font-size: 16px; border: none; border-radius: 5px; cursor: pointer; }
+    .estimation { text-align: center; font-weight: bold; margin-top: 10px; }
+    footer { background-color: #000; color: white; text-align: center; padding: 30px 10px; margin-top: 40px; }
+    .hidden-keywords { display: none; }
   </style>
 </head>
 <body>
@@ -112,7 +30,7 @@
 
   <div class="container">
     <img src="voiture.png" alt="Voiture VTC" class="car-image" />
-
+    
     <div class="buttons">
       <a href="tel:0644120784"><img src="https://img.icons8.com/ios-filled/50/FFFFFF/phone.png"/> Appeler</a>
       <a href="https://wa.me/33644120784" target="_blank"><img src="https://img.icons8.com/ios-filled/50/FFFFFF/whatsapp.png"/> WhatsApp</a>
@@ -122,17 +40,20 @@
     </div>
 
     <div class="info">
-      OuassVTC est votre service de transport privé basé à Perpignan. Nos chauffeurs professionnels sont disponibles 7j/7 pour tous vos déplacements avec ponctualité, sécurité et confort.
+      OuassVTC est votre service de transport privé basé à Perpignan. Nos chauffeurs professionnels sont disponibles 7j/7 pour tous vos déplacements avec ponctualité, sécurité et confort. Nous vous offrons un service rapide et efficace pour vous conduire où vous le souhaitez.
     </div>
 
     <form onsubmit="sendEmail(event)">
-      <input type="text" id="nom" name="nom" placeholder="Nom" required />
-      <input type="tel" id="telephone" name="telephone" placeholder="Téléphone" required />
-      <input type="text" id="depart" name="depart" placeholder="Adresse de départ (ville + code postal)" required />
-      <input type="text" id="arrivee" name="arrivee" placeholder="Adresse d'arrivée (ville + code postal)" required />
-      <input type="datetime-local" id="dateheure" name="dateheure" required />
-      <textarea id="message" name="message" placeholder="Informations complémentaires"></textarea>
-      <div class="estimation" id="prixEstime">Calcul en cours...</div>
+      <input type="text" id="nom" placeholder="Nom" required />
+      <input type="tel" id="telephone" placeholder="Téléphone" required />
+      <input type="text" id="depart" placeholder="Adresse de départ (avec code postal et ville)" oninput="autocompleteAdresse('depart', this.value)" required />
+      <ul id="depart_suggestions" style="list-style:none;padding:0;margin:0;"></ul>
+      <input type="text" id="arrivee" placeholder="Adresse d'arrivée (avec code postal et ville)" oninput="autocompleteAdresse('arrivee', this.value)" required />
+      <ul id="arrivee_suggestions" style="list-style:none;padding:0;margin:0;"></ul>
+      <button type="button" onclick="geoLocaliser('arrivee')" style="margin-bottom:10px;">📍 Me localiser</button>
+      <input type="datetime-local" id="dateheure" required />
+      <textarea id="message" placeholder="Informations complémentaires"></textarea>
+      <div id="prixEstime" class="estimation"></div>
       <button type="submit">Envoyer la demande</button>
     </form>
 
@@ -144,70 +65,93 @@
   </footer>
 
   <div class="hidden-keywords">
-    Taxi Perpignan, VTC 66, chauffeur privé, Uber, réservation VTC Perpignan, alternative taxi.
+    Taxi Perpignan, VTC 66, chauffeur privé, Uber, G7, Bolt, réservation VTC, transport sécurisé, chauffeur disponible, véhicule avec chauffeur, service de transport 24/7, alternative taxi.
   </div>
 
   <script>
-    function trackClick(eventName) {
-      gtag('event', eventName, {
-        event_category: 'Interaction',
-        event_label: 'OuassVTC'
-      });
-    }
-
     emailjs.init("U08QGWWRUenJDOllc");
 
     function sendEmail(event) {
       event.preventDefault();
       const depart = document.getElementById("depart").value;
       const arrivee = document.getElementById("arrivee").value;
+      const prix = document.getElementById("prixEstime").innerText;
 
-      estimateDistance(depart, arrivee).then(({distanceKm, prix}) => {
-        emailjs.send("service_kdvgh9f", "template_5xt5vlv", {
-          nom: document.getElementById("nom").value,
-          telephone: document.getElementById("telephone").value,
-          dateheure: document.getElementById("dateheure").value,
-          depart,
-          arrivee,
-          message: document.getElementById("message").value,
-          prix_estime: prix.toFixed(2) + " €",
-          distance_estimee: distanceKm.toFixed(1) + " km"
-        }).then(() => {
-          alert("Votre demande a bien été envoyée !");
-        }).catch(() => {
-          alert("Erreur lors de l'envoi.");
-        });
-      });
+      emailjs.send("service_kdvgh9f", "template_5xt5vlv", {
+        nom: document.getElementById("nom").value,
+        telephone: document.getElementById("telephone").value,
+        dateheure: document.getElementById("dateheure").value,
+        depart,
+        arrivee,
+        message: document.getElementById("message").value + "\\n\\n" + prix
+      })
+      .then(() => alert("Votre demande a bien été envoyée !"))
+      .catch(() => alert("Erreur lors de l'envoi. Veuillez réessayer."));
     }
 
-    async function estimateDistance(depart, arrivee) {
+    function estimateDistance(depart, arrivee) {
       const url = `https://router.project-osrm.org/route/v1/driving/${encodeURIComponent(depart)};${encodeURIComponent(arrivee)}?overview=false`;
-      try {
-        const res = await fetch(url);
-        const data = await res.json();
-        if (data.routes && data.routes.length) {
-          const distanceKm = data.routes[0].distance / 1000;
-          const distanceCorrigee = Math.max(distanceKm, 7);
-          const prix = Math.max(20, distanceCorrigee * 1.6);
-          document.getElementById("prixEstime").innerText = `Distance estimée : ${distanceKm.toFixed(1)} km | Prix estimé : ${prix.toFixed(2)} €`;
-          return {distanceKm, prix};
-        } else {
-          document.getElementById("prixEstime").innerText = "Erreur lors de l'estimation.";
-          return {distanceKm: 0, prix: 20};
-        }
-      } catch (err) {
-        document.getElementById("prixEstime").innerText = "Impossible de calculer la distance.";
-        return {distanceKm: 0, prix: 20};
-      }
+      fetch(url)
+        .then(res => res.json())
+        .then(data => {
+          if (data.routes && data.routes.length) {
+            const distanceKm = data.routes[0].distance / 1000;
+            const distanceArrondie = Math.max(distanceKm, 7);
+            const prix = Math.max(20, distanceArrondie * 1.6);
+            document.getElementById("prixEstime").innerText = `Distance estimée : ${distanceKm.toFixed(1)} km | Prix estimé : ${prix.toFixed(2)} €`;
+          }
+        });
     }
 
-    document.getElementById("depart").addEventListener("change", updateEstimation);
-    document.getElementById("arrivee").addEventListener("change", updateEstimation);
+    document.getElementById("depart").addEventListener("blur", () => estimateDistance(
+      document.getElementById("depart").value,
+      document.getElementById("arrivee").value
+    ));
+    document.getElementById("arrivee").addEventListener("blur", () => estimateDistance(
+      document.getElementById("depart").value,
+      document.getElementById("arrivee").value
+    ));
 
-    function updateEstimation() {
-      const depart = document.getElementById("depart").value;
-      const arrivee = document.getElementById("arrivee").value;
-      if (depart && arrivee) estimateDistance(depart, arrivee);
+    function autocompleteAdresse(id, query) {
+      const listId = id + "_suggestions";
+      const suggestions = document.getElementById(listId);
+      suggestions.innerHTML = "";
+      if (query.length < 3) return;
+      fetch(`https://photon.komoot.io/api/?q=${encodeURIComponent(query)}&limit=5`)
+        .then(res => res.json())
+        .then(data => {
+          data.features.forEach(feature => {
+            const li = document.createElement("li");
+            li.textContent = feature.properties.name + ", " + (feature.properties.city || '') + " " + (feature.properties.postcode || '');
+            li.style.cursor = "pointer";
+            li.onclick = () => {
+              document.getElementById(id).value = li.textContent;
+              suggestions.innerHTML = "";
+              estimateDistance(
+                document.getElementById("depart").value,
+                document.getElementById("arrivee").value
+              );
+            };
+            suggestions.appendChild(li);
+          });
+        });
+    }
+
+    function geoLocaliser(id) {
+      if (!navigator.geolocation) {
+        alert("La géolocalisation n'est pas supportée.");
+        return;
+      }
+      navigator.geolocation.getCurrentPosition(pos => {
+        const lat = pos.coords.latitude;
+        const lon = pos.coords.longitude;
+        fetch(`https://nominatim.openstreetmap.org/reverse?lat=${lat}&lon=${lon}&format=json`)
+          .then(res => res.json())
+          .then(data => {
+            document.getElementById(id).value = data.display_name;
+            estimateDistance(document.getElementById("depart").value, data.display_name);
+          });
+      }, () => alert("Impossible de récupérer votre position."));
     }
 
     function googleTranslateElementInit() {
